--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -428,22 +428,31 @@
 <template id="product_price">
   <div itemprop="offers" itemscope="itemscope" itemtype="http://schema.org/Offer" class="product_price mt16">
       <h4 class="oe_price_h4 css_editable_mode_hidden">
-          <span class="text-danger oe_default_price" style="text-decoration: line-through; white-space: nowrap;"
-            t-field="product.lst_price"
-            t-field-options='{
-              "widget": "monetary",
-              "from_currency": "product.company_id.currency_id",
-              "display_currency": "user_id.partner_id.property_product_pricelist.currency_id"
-           }'/>
+          <div>
+              Public Price *:
+              <span class="text-danger oe_default_price" style="text-decoration: line-through; white-space: nowrap; display: inline;"
+                t-field="product.lst_price"
+                t-field-options='{
+                  "widget": "monetary",
+                  "from_currency": "product.company_id.currency_id",
+                  "display_currency": "user_id.partner_id.property_product_pricelist.currency_id"
+               }'/>
+          </div>
+          <div>
+          Your Price *:
           <b class="oe_price" style="white-space: nowrap;"
             t-field="product.price"
             t-field-options='{
                "widget": "monetary",
                "display_currency": "user_id.partner_id.property_product_pricelist.currency_id"
            }'/>
+          </div>
           <span itemprop="price" style="display:none;" t-esc="product.price"/>
           <span itemprop="priceCurrency" style="display:none;" t-esc="user_id.partner_id.property_product_pricelist.currency_id.name"/>
       </h4>
+      <div>
+        * Prix HTVA en magasin.
+      </div>
       <h4 class="css_editable_mode_display" style="display: none;">
         <span t-field="product.lst_price"
             t-field-options='{
@@ -721,7 +730,7 @@
                   <t t-call="website_sale.total"/>
                   <div class="clearfix"/>
 
-                  <a t-if="not optional_products and website_sale_order and website_sale_order.website_order_line" class="btn btn-primary pull-right mb32" href="/shop/checkout">Process Checkout <span class="fa fa-long-arrow-right"/></a>
+                  <a t-if="not optional_products and website_sale_order and website_sale_order.website_order_line" class="btn btn-primary pull-right mb32" href="/shop/checkout">Confirm<span class="fa fa-long-arrow-right"/></a>
 
                   <div class="oe_structure"/>
               </div>
@@ -833,7 +842,7 @@
     <div id="wrap">
       <div class="container oe_website_sale">
           <ul class="wizard pull-right">
-              <li><a href="/shop/cart" class="text-success">Review Order<span class="chevron"></span></a></li>
+              <li><a href="/shop/cart" class="text-success">Shipping &amp; Billing<span class="chevron"></span></a></li>
               <li class="text-primary">Shipping &amp; Billing<span class="chevron"></span></li>
               <li class="text-muted">Payment<span class="chevron"></span></li>
               <li class="text-muted">Confirmation<span class="chevron"></span></li>
